Make small improvements to DDLManagerImpl